# auth

./: .dev.vars  .env.example  .gitignore  Cargo.toml  README.md  clippy.toml  diesel.toml  wrangler.toml
db/: Cargo.toml
db/src/: lib.rs  schema.rs
db/src/migrations/2026-03-24-050127-0000_jwk/: down.sql  up.sql
src/: authorize.rs  error.rs  keygen.rs  keys.rs  lib.rs  main.rs  model.rs  robots.txt  serde.rs  session.rs  util.rs
src/db/: schema.rs
src/db/migration/2026-04-07-190250-0000_init/: up.sql
src/endpoints/: authorize.rs  jwks.rs  mod.rs  openid_config.rs  token.rs  userinfo.rs
src/endpoints/callback/: goog.rs  mod.rs
