[workspace]
members = [".", "db"]
resolver = "3"
default-members = ["."]

[workspace.package]
edition = "2024"
rust-version = "1.94"

[workspace.dependencies]
chrono = "^0.4"
diesel = { version = "^2.3", features = ["postgres", "serde_json"] }
diesel-async = { version = "^0.8", features = ["postgres"] }
serde = "^1"
strum = { version = "^0.28", features = ["strum_macros"] }
uuid = "^1.22"

[profile.release_extra]
inherits = "release"
lto = "fat"
codegen-units = 1
debug = "full"

[workspace.lints.rust]
ambiguous_negative_literals = "warn"
# enable when the ecosystem supports these better and targetting a supporting rust version
# closure_returning_async_block = "warn"
deref_into_dyn_supertrait = "warn"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "warn"
ffi_unwind_calls = "deny"
let_underscore_lock = "deny"
linker_messages = "warn"
macro_use_extern_crate = "deny"
map_unit_fn = "deny"
missing_docs = "deny"
# don't become the very thing (C++ diamond problem) you swore to destroy
# i'm dreaming of a stabilized christmas
# multiple_supertrait_upcastable = "warn"
must_not_suspend = "warn"
non_ascii_idents = "deny"
redundant_imports = "deny"
redundant_lifetimes = "deny"
redundant_semicolons = "deny"
supertrait_item_shadowing_definition = "deny"
supertrait_item_shadowing_usage = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "deny"
unnameable_types = "warn"
unsafe_attr_outside_unsafe = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "warn"
unused_import_braces = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_unsafe = "deny"
variant_size_differences = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
assigning_clones = "warn"
bool_to_int_with_if = "warn"
borrow_as_ptr = "deny"
cargo_common_metadata = "deny"
case_sensitive_file_extension_comparisons = "deny"
cast_lossless = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_ptr_alignment = "deny"
cast_sign_loss = "deny"
cfg_not_test = "warn"
checked_conversions = "warn"
cloned_instead_of_copied = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
dbg_macro = "warn"
deref_by_slicing = "warn"
doc_broken_link = "deny"
doc_link_with_quotes = "warn"
doc_paragraphs_missing_punctuation = "warn"
elidable_lifetime_names = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
enum_glob_use = "warn"
error_impl_error = "warn"
expect_used = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filetype_is_file = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "deny"
fn_to_numeric_cast_any = "warn"
format_collect = "warn"
format_push_string = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
ignore_without_reason = "warn"
impl_trait_in_params = "deny"
implicit_clone = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_ilog2 = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
mismatching_type_param_order = "deny"
missing_assert_message = "warn"
multiple_crate_versions = "warn"
multiple_inherent_impl = "warn"
needless_bitwise_bool = "warn"
needless_pass_by_value = "warn"
needless_type_cast = "warn"
negative_feature_names = "warn"
non_ascii_literal = "warn"
non_zero_suggestions = "warn"
option_as_ref_cloned = "warn"
partial_pub_fields = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ptr_offset_by_literal = "warn"
pub_underscore_fields = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
rc_buffer = "warn"
rc_mutex = "deny"
redundant_closure_for_method_calls = "warn"
redundant_feature_names = "warn"
redundant_type_annotations = "warn"
ref_as_ptr = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
return_and_then = "warn"
same_functions_in_if_condition = "warn"
same_name_method = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
stable_sort_primitive = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"
str_split_at_newline = "warn"
str_to_string = "warn"
transmute_ptr_to_ptr = "deny"
trivially_copy_pass_by_ref = "warn"
try_err = "warn"
undocumented_unsafe_blocks = "deny"
unicode_not_nfc = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unneeded_field_pattern = "warn"
unnested_or_patterns = "warn"
unused_async = "deny"
unused_result_ok = "warn"
unused_self = "warn"
unused_trait_names = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
unwrap_used = "warn"
verbose_bit_mask = "warn"
verbose_file_reads = "warn"
wildcard_dependencies = "deny"
zero_sized_map_values = "deny"

[package]
name = "auth"
description = "homegrown auth primitive"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
publish = false

[dependencies]
anyhow = "^1"
actix-web = "^4.13"
db = { path = "./db" }
# constrained by diesel-async
deadpool = "0.13.0"
diesel = { workspace = true }
diesel-async = { workspace = true, features = ["deadpool"] }
dotenvy = "^0.15"
jsonwebkey = { version = "^0.4", features = ["generate"] }
openssl = "^0.10"
phf = { version = "0.13.1", features = ["macros"] }
reqwest = "0.13.2"
serde_json = "^1"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
uuid = { workspace = true, features = ["serde", "v4"] }
serde = { version = "1.0.228", features = ["derive"] }
url = "^2.5"
