[package]
name = "db"
description = "data base"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
serde = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }